More information on these changes can be found in the NEWS and ChangeLog
files.

1.3.1rc1
---------
  + Command changes:

      MDTM now always returns times in GTM, regardless of TimesGMT setting

  + New configuration directives:

      DisplayChdir

      DisplayFileTransfer
        (only works for successful transfers)

      QuotaOptions
        ScanOnLogin

      SQLOptions
        noDisconnectOnError
        useNormalizedGroupSchema

      TLSCryptoDevice

      TLSPassPhraseProvider

      Trace

      TraceLog

      UseIPv6

        To disable IPv6 support in a running proftpd, you can place:

          UseIPv6 on|off

        at the top of your proftpd.conf.

        Alternatively, there are command-line options for controlling
        this:

          -4, --ipv4     Support IPv4 functionality only
          -6, --ipv6     Support IPv6 functionality

        Instead of using the UseIPv6 configuration directive, you can
        invoke proftpd using the -4 command-line option:

          proftpd -4 ...

      UseLastlog

      UseUTF8

  + Enhanced configuration directives:

      CreateHome uid gid

      LogFormat %S, %{version}

      SQLConnectInfo MySQL Unix domain socket

      SQLNamedQuery
        %{env:VAR}

      SQLGroupWhereClause, SQLUserWhereClause
        variables except for %{n} numeric references supported

      TLSRequired auth, auth+data

  + New configure options:

      --enable-devel=stacktrace
        This configure option enables logging of the call stack trace
        whenever a SIGSEGV signal is received.  Very very useful for
        tracking down the cause of a segfault.

      --enable-nls

      --with-lastlog[=PATH]

        Automatic determination
        /var/adm/lastlog
 
  + New modules:

      mod_ban

      mod_lang

      mod_quotatab_radius

      mod_wrap2, mod_wrap2_file, mod_wrap2_sql

  + New documentation:

      doc/howto/CreateHome.html

  + Module enhancements:

     mod_ctrls_admin